fix: Bad spacing on webpages

--- a/src/client/assets/styles/index.css
+++ b/src/client/assets/styles/index.css
@@ -6,12 +6,7 @@
   margin-bottom: 1.25rem;
 }
 
-.card-header h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
-
 .uploaded-image {
   max-height: 12.5rem;
   margin: 0.75rem 0;
 }
-
